image banner section fix on mobile

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -139,6 +139,10 @@
   .banner--stacked .banner__media {
     flex-direction: column;
   }
+
+  .banner__content {
+    margin-top: -300px;
+  }
 }
 
 .banner__media {
